<resources>
    <string name="app_name">Lesson7_1423_1_7</string>
    <string name="back">BACK</string>
    <string name="main_screen">main</string>
    <string name="favorite">favorite</string>
    <string name="settings">settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_screen">Favorite Screen</string>
    <string name="main_screen_label">Main Screen</string>
    <string name="use_backstack">use backstack</string>
    <string name="add">Add</string>
    <string name="replace">Replace</string>
    <string name="backasremove">BackAsRemove</string>
    <string name="deletebeforeadd">DeleteBeforeAdd</string>
</resources>